# pdf_microservice

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/micro/: main.py
